utpadted title element.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<tytle>
+<title>
 My First FreeCodeCamp Project
-</tytle>
+</title>
 
 <style>
 <!-- This turns the figure element into flexible container which allows its children to be aligned.-->
