added second project

--- a/FreeCodeCamp/p2/p2.html
+++ b/FreeCodeCamp/p2/p2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<tytle>
-My First FreeCodeCamp Project
-</tytle>
+<title>
+My second FreeCodeCamp Project
+</title>
 
 <style>
 <!-- This turns the figure element into flexible container which allows its children to be aligned.-->
@@ -38,10 +38,10 @@ background-color: black;
 </head>
 <body id="main">
 <header>
-<h1 id="title">My First FreeCodeCamp Project</h1>
+<h1 id="title">My second FreeCodeCamp Project</h1>
 </header>
 <main>
-Here comes my content.
+<p>I should not forget to change this file's content.>/p>
 <figure id="img-div">
 <figcaption id="img-caption">
 This should be an image of a relaxing cat.
