--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ This should be an image of a relaxing cat.
 <img id="image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="This is a relaxing cat.">
 </figure>
 <p>Hello, and welcome to my first FreeCodeCamp project. This should demonstrate my grasp of the learned concepts. I hope I finish it successfully. You can <a href="https://www.math.bas.bg/vt/" target="_blank">read more about it here</a>.</p>
-<p>And here you can see my <a href="fcc/chalenges/p2.html">second project.</a></p>
+<p>And here you can see my <a href="fcc/p2.html">second project.</a></p>
 </main>
 <footer>
 <p class="footer-paragraph">© 2022, negi4a</p>
