--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ This should be an image of a relaxing cat.
 <footer>
 <p class="footer-paragraph">© 2022, negi4a</p>
 </footer>
-<1-- Below is the first chalenge assignment.
+<!-- Below is the first chalenge assignment.
 Build a Tribute Page
 Objective: Build a CodePen.io app that is functionally similar to this: https://codepen.io/freeCodeCamp/full/zNqgVx.
 
